Color update Commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/utilities.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Welcome to EdgeLedger</title>
+    <title>Welcome to Foreign Expense</title>
   </head>
   <body>
     <header class="hero">
