--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/cd8a53ef55.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/reg.css" />
+    <link rel="stylesheet" href="./css/reg.css" />
     <title>Log in</title>
   </head>
   <body>
