--- a/aboutus.html
+++ b/aboutus.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/utilities.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="hero-1">
+      <div id="navbar" class="navbar">
+        <h1 class="logo">
+          <span class="text-primary">
+            <i class="fas fa-book-open"></i> Foreign</span
+          >Expense
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="index.html" class="icon">Home</a></li>
+            <li><a href="aboutus.html" class="icon">About</a></li>
+            <li><a href="credits.html" class="icon">Credits</a></li>
+            <li><a href="login.html">Log in</a></li>
+            <li><a href="signup.html">Sign up</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- About US -->
+      <section id="about-us">
+        <div class="about-us">
+          <h1>About Us</h1>
+          <p>
+            Studying Abroad can change the way You see the World..!! Our goal is
+            to remove any barriers which are making it tough for the
+            enthusiastic students to study abroad in their dream countries. Our
+            focus is to help students choose the cities and countries according
+            to their budget and help them to live a healthy lifestyle.
+          </p>
+        </div>
+      </section>
+    </header>
+
+    <footer class="footer bg-dark">
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+      </div>
+      <p>Copyrights &copy; 2020 ExpenseTracker</p>
+    </footer>
+  </body>
 </html>
