one html page is yet to be done commit

--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="hero-1">
-      <div id="navbar" class="navbar">
+      <div id="navbar" class="navbar-1">
         <h1 class="logo">
           <span class="text-primary">
             <i class="fas fa-book-open"></i> Foreign</span
@@ -33,16 +33,51 @@
       </div>
 
       <!-- About US -->
-      <section id="about-us">
-        <div class="about-us">
-          <h1>About Us</h1>
-          <p>
-            Studying Abroad can change the way You see the World..!! Our goal is
-            to remove any barriers which are making it tough for the
-            enthusiastic students to study abroad in their dream countries. Our
-            focus is to help students choose the cities and countries according
-            to their budget and help them to live a healthy lifestyle.
-          </p>
+      <section class="solutions flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img
+                src="./img/about us/group-happy-young-students-university_85574-4531.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-primary">
+              <h2 style="font-size: 2.8rem">About Us</h2>
+              <p style="font-size: 1.2rem">
+                Studying Abroad can change the way You see the World..!! Our
+                goal is to remove any barriers which are making it tough for the
+                enthusiastic students who aspire to study abroad in their dream
+                countries. Our focus is to guide students choose the cities and
+                countries in the modest way.<br />We basically, as a team here
+                provide you a platform where you can estimate the expenses you
+                will be having during your studies abroad. This will greatly
+                help you in track your expenses. manage them and manage the time
+                as well. Whatever queries you have you can contact the
+                following.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="contact-info" class="bg-dark">
+        <div class="box">
+          <i class="fas fa-hotel fa-3x"></i>
+          <h3>Location</h3>
+          <p>On Mumbai-Pune highway, Kharghar</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-phone fa-3x"></i>
+          <h3>Phone Number</h3>
+          <p>75061680408 <br /><br />8925090704</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-envelope fa-3x"></i>
+          <h3>Email Address</h3>
+          <p>sridharravi55@themotel.com <br /><br />something@themotel.com</p>
         </div>
       </section>
     </header>
