frontend complete commit

--- a/aboutus.html
+++ b/aboutus.html
@@ -67,17 +67,17 @@
         <div class="box">
           <i class="fas fa-hotel fa-3x"></i>
           <h3>Location</h3>
-          <p>On Mumbai-Pune highway, Kharghar</p>
+          <p>SRM IST, Kattankulathur</p>
         </div>
         <div class="box">
           <i class="fas fa-phone fa-3x"></i>
           <h3>Phone Number</h3>
-          <p>75061680408 <br /><br />8925090704</p>
+          <p>8707629441</p>
         </div>
         <div class="box">
           <i class="fas fa-envelope fa-3x"></i>
           <h3>Email Address</h3>
-          <p>sridharravi55@themotel.com <br /><br />something@themotel.com</p>
+          <p>sridharravi55@gmail.com</p>
         </div>
       </section>
     </header>
