--- a/credits.html
+++ b/credits.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/credits.css" />
+    <title>Credits</title>
+  </head>
+  <body>
+    <section class="section-1">
+      <h1>Cyber_Warriors</h1>
+    </section>
+    <section class="section">
+      <h2>Teammates</h2>
+      <ul>
+        <li>Girish Pandey</li>
+        <li>D V Ravi Sridhar</li>
+        <li>Maumita Biswas</li>
+        <li>Tanshi Nigam</li>
+        <li>Sarthak Jain</li>
+      </ul>
+    </section>
+    <section class="section">
+      <h2>Technology Used</h2>
+      <ul>
+        <li>VS Code(Text Editor)</li>
+        <li>HTML and CSS</li>
+        <li>JavaScript</li>
+        <li>Google Collabs</li>
+        <li>Tensorflow</li>
+        <li>Pandas</li>
+        <li>Scikit-Learn</li>
+      </ul>
+    </section>
+    <section class="section" style="margin-top: 100px">
+      <h2>Sources</h2>
+      <ul>
+        <li>W3Schools</li>
+        <li>Google</li>
+        <li>Fontawesome</li>
+        <li>Google Fonts</li>
+        <li>Freepik(for pics)</li>
+      </ul>
+    </section>
+
+    <a href="index.html" class="btn">Back to Home</a>
+  </body>
 </html>
