--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <form id="form" class="form">
-        <h2>Login Here</h2>
+        <h2>Login</h2>
         <div class="form-control">
           <label for="email"><i class="fas fa-envelope"></i>Email</label>
 
