--- a/expenseform.html
+++ b/expenseform.html
@@ -59,7 +59,7 @@
             <label for="expenses" style="padding-right: 20px;">Expenses:</label>
             <input type="text" id="expense" placeholder="Estimated Expenses" />
           </div>
-          <button class="btn-1">Submit</button>
+          <button class="btn-1" id="button-1">Submit</button>
       </form>
       </section>
 
@@ -76,5 +76,7 @@
       </div>
       <p>Copyrights &copy; 2020 ExpenseTracker</p>
     </footer>
+
+    <script src="./css/app.js"></script>
   </body>
 </html>
