--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
         <button class="login" id="check">Log in</button>
         <input type="checkbox" id="check" />
         <label for="checkbox">stay logged in?</label>
-        <a href="index.html" class="log">Back to signup</a>
+        <a href="index.html" class="log">Back to home</a>
       </form>
     </div>
 
